--- a/ustava.html
+++ b/ustava.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="7; url='http://www.pisrs.si/Pis.web/pregledPredpisa?id=USTA1#'" />
-  </head>
   <body>
-    <p>You will be redirected to w3docs.com soon!</p>
+    <iframe src="http://www.pisrs.si/Pis.web/pregledPredpisa?id=USTA1#" />
   </body>
 </html>
