--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         <div class="slides">
             <section>
                 <div class="crawl crawl-animation">
-                    <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT.</p>
-                    <p>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE ET DOLORE MAGNA ALIQUA.</p>
-                    <!-- Add more Lorem Ipsum text here -->
+                    <h1>ACHTUNG!</h1>
+                    <p>ALLES TURISTEN UND NONTEKNISCHEN LOOKENSPEEPERS!
+                    DAS KOMPUTERMASCHINE IST NICHT FÜR DER GEFINGERPOKEN UND MITTENGRABEN! ODERWISE IST EASY TO SCHNAPPEN DER SPRINGENWERK, BLOWENFUSEN UND POPPENCORKEN MIT SPITZENSPARKEN.
+                    IST NICHT FÜR GEWERKEN BEI DUMMKOPFEN. DER RUBBERNECKEN SIGHTSEEREN KEEPEN DAS COTTONPICKEN HÄNDER IN DAS POCKETS MUSS.
+                    ZO RELAXEN UND WATSCHEN DER BLINKENLICHTEN.</p>
                 </div>
             </section>
         </div>
