--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         }
 
         .crawl-animation {
-            animation: crawlAnimation 60s linear infinite;
+            animation: crawlAnimation 30s linear infinite;
         }
 
         @keyframes crawlAnimation {
             0% {
-                transform: translateY(100%);
+                transform: translateY(100vh);
             }
             100% {
                 transform: translateY(-100%);
@@ -38,11 +38,8 @@
         <div class="slides">
             <section>
                 <div class="crawl crawl-animation">
-                    <h1>ACHTUNG!</h1>
-                    <p>ALLES TURISTEN UND NONTEKNISCHEN LOOKENSPEEPERS!
-                    DAS KOMPUTERMASCHINE IST NICHT FÜR DER GEFINGERPOKEN UND MITTENGRABEN! ODERWISE IST EASY TO SCHNAPPEN DER SPRINGENWERK, BLOWENFUSEN UND POPPENCORKEN MIT SPITZENSPARKEN.
-                    IST NICHT FÜR GEWERKEN BEI DUMMKOPFEN. DER RUBBERNECKEN SIGHTSEEREN KEEPEN DAS COTTONPICKEN HÄNDER IN DAS POCKETS MUSS.
-                    ZO RELAXEN UND WATSCHEN DER BLINKENLICHTEN.</p>
+                    <p style="font-weight: bold;">ACHTUNG!</p>
+                    <p>ALLES TURISTEN UND NONTEKNISCHEN LOOKENSPEEPERS! DAS KOMPUTERMASCHINE IST NICHT FÜR DER GEFINGERPOKEN UND MITTENGRABEN! ODERWISE IST EASY TO SCHNAPPEN DER SPRINGENWERK, BLOWENFUSEN UND POPPENCORKEN MIT SPITZENSPARKEN. IST NICHT FÜR GEWERKEN BEI DUMMKOPFEN. DER RUBBERNECKEN SIGHTSEEREN KEEPEN DAS COTTONPICKEN HÄNDER IN DAS POCKETS MUSS. ZO RELAXEN UND WATSCHEN DER BLINKENLICHTEN.</p>
                 </div>
             </section>
         </div>
