--- a/vegamind.html
+++ b/vegamind.html
@@ -1,161 +1,93 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>How to start the first FTC team in 200 km radius</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+	<title>How to start the first FTC team in 200 km radius</title>
 
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+	<link rel="stylesheet" href="dist/reset.css">
+	<link rel="stylesheet" href="dist/reveal.css">
+	<link rel="stylesheet" href="dist/theme/dracula.css">
 
-		<script src="plugin/math/math.js"></script>
+	<!-- Theme used for syntax highlighted code -->
+	<link rel="stylesheet" href="plugin/highlight/monokai.css">
 
-		<style>
-			.grid-container {
-				display: grid;
-				grid-template-columns: auto auto auto;
-				padding: 10px;
-			}
-			.grid-item {
-				border: 2px solid rgba(255, 255, 255, 0.8);
-				padding: 20px;
-				font-size: 30px;
-				text-align: center;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>
-					<section data-auto-animate>
-						<img src="https://www.explainxkcd.com/wiki/images/thumb/e/e9/data_quality_2x.png/671px-data_quality_2x.png" />
-					</section>
-					<section data-auto-animate>
-						<h2>Communication circuits <br> and devices</h2>
-						<img src="https://www.explainxkcd.com/wiki/images/thumb/e/e9/data_quality_2x.png/671px-data_quality_2x.png" />
-						<p>Jaka Kovač S51JK, G3B</p>
-					</section>
-				</section>
-				<section>
-					<section>
-						<h2>Digital communication</h2>
-					</section>
-					<section>
-						<h3>ASCII</h3>
-						<img class="fragment" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/USASCII_code_chart.png/1024px-USASCII_code_chart.png" />
-					</section>
-				</section>
-				<section>
-					<section>
-						<h2>Mathematics behind CRC</h2>
-					</section>
-					<section data-auto-animate>
-						<h3>Finite fileds</h3>
-						<table>
-						<tbody>
-							<tr>
-								<td>$0 + 0 = 0$</td>
-								<td>$0 - 0 = 0$</td>
-							</tr>
-							<tr>
-								<td>$0 + 1 = 1$</td>
-								<td>$0 - 1 = 1$</td>
-							</tr>
-							<tr>
-								<td>$1 + 0 = 1$</td>
-								<td>$1 - 0 = 1$</td>
-							</tr>
-							<tr>
-								<td>$1 + 1 = 0$</td>
-								<td>$1 - 1 = 0$</td>
-							</tr>
-						</tbody>
-						</table>
-					</section>
-					<section data-auto-animate>
-						<h3>Finite fileds</h3>
-						<table>
-						<tbody>
-							<tr>
-								<td>$0 * 0 = 0$</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>$0 * 1 = 0$</td>
-								<td>$0 / 1 = 0$</td>
-							</tr>
-							<tr>
-								<td>$1 * 0 = 0$</td>
-								<td>$1 / 0 = 1$</td>
-							</tr>
-							<tr>
-								<td>$1 * 1 = 1$</td>
-								<td></td>
-							</tr>
-						</tbody>
-						</table>
-					</section>
+	<script src="plugin/math/math.js"></script>
 
-					<section>
-						<h3>Polynomials</h3>
-					</section>
-					<section>
-						<h3>Encoding message as polynomial</h3>
-					</section>
-					<section>
-						<h3>Polynomial devision</h3>
-					</section>
-				</section>
-				<section>
-					<section>
-						<h2>Cyclic redundany check</h2>
-					</section>
-					<section>
-						<h3>CRC generation</h3>
-					</section>
-					<section>
-						<h3>CRC validation</h3>
-					</section>
-				</section>
-				<section data-auto-animate data-auto-animate-restart>
-					<h2 id="one">Circuit design</h2>
-				</section>
+	<style>
+		.reveal .grid-container {
+			display: grid;
+			grid-template-columns: repeat(3, 33%);
+			gap: 10px;
+		}
+
+		.reveal .grid-item {
+			text-align: center;
+		}
+		
+		.profile{
+			width: 65%;
+		}
+	</style>
+
+</head>
+
+<body>
+	<div class="reveal">
+		<div class="slides">
+			<section>
 				<section data-auto-animate>
-					<h2 id="one">Circuit design</h2>
-					<img src="./circuit.png" height="500vh"/>
+					<h1>How to start an FTC team</h1>
 				</section>
-				<section>
-					<h2>Great resources</h2>
-					<ul>
-						<li>Ben Eater: <i style="font-style: italic;">Hardware build: CRC calculation</i></li>
-						<li>Ben Eater: <i style="font-style: italic;">How do CDCs work?</i></li>
-						<li>J. Vraničar et. al: <i style="font-style: italic;">Priročnik za radioamaterje</i></li>
-						<li>S51KJ, S54UNC, S50ZK: <i style="font-style: italic;">Radioamaterski tečaj 2022</i></li>
-					</ul>
+
+				<section data-auto-animate data-autoslide="500">
+					<h1>How to start an FTC team</h1>
+					<h2>if you are the only one around</h2>
 				</section>
-			</div>
+
+				<section data-auto-animate>
+					<h1>How to start an FTC team</h1>
+					<img src="VegaMind-images/IMG_1517.JPG" alt="VegaMind" width="40%">
+					<h2>if you are the only one around</h2>
+				</section>
+			</section>
+			<section>
+				<h2>Who are we?</h2>
+				<div class="grid-container">
+					<div class="grid-item fragment" data-fragment-index="1">Jaka Kovač</div>
+					<div class="grid-item fragment" data-fragment-index="2">Ana Ločnikar Jarc</div>
+					<div class="grid-item fragment" data-fragment-index="3">David Zindovič</div>
+					<div class="grid-item fragment" data-fragment-index="1"><img class="profile" src="VegaMind-images/Jaka-2.JPG" ></div>
+					<div class="grid-item fragment" data-fragment-index="2"><img class="profile" src="VegaMind-images/Ana-2.JPG" ></div>
+					<div class="grid-item fragment" data-fragment-index="3"><img class="profile" src="VegaMind-images/David-1.jpg" ></div>
+					<div class="grid-item fragment" data-fragment-index="1">member <br> construction</div>
+					<div class="grid-item fragment" data-fragment-index="2">member <br> programming</div>
+					<div class="grid-item fragment" data-fragment-index="3">mentor <br> social media</div>
+					<div class="grid-item fragment" data-fragment-index="1">6 years of experience <br> in FIRST</div>
+					<div class="grid-item fragment" data-fragment-index="2">2 years of experience <br> in FIRST</div>
+					<div class="grid-item fragment" data-fragment-index="3">7 years of experience <br> in FIRST</div>
+				</div>
+			</section>
 		</div>
+	</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
-				hash: true,
+	<script src="dist/reveal.js"></script>
+	<script src="plugin/notes/notes.js"></script>
+	<script src="plugin/markdown/markdown.js"></script>
+	<script src="plugin/highlight/highlight.js"></script>
+	<script>
+		// More info about initialization & config:
+		// - https://revealjs.com/initialization/
+		// - https://revealjs.com/config/
+		Reveal.initialize({
+			hash: true,
 
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.KaTeX ]
-			});
-		</script>
-	</body>
+			// Learn about plugins: https://revealjs.com/plugins/
+			plugins: [RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.KaTeX]
+		});
+	</script>
+</body>
+
 </html>
