--- a/vegamind.html
+++ b/vegamind.html
@@ -26,8 +26,8 @@
 		.reveal .grid-item {
 			text-align: center;
 		}
-		
-		.profile{
+
+		.profile {
 			width: 65%;
 		}
 	</style>
@@ -56,19 +56,64 @@
 			<section>
 				<h2>Who are we?</h2>
 				<div class="grid-container">
-					<div class="grid-item fragment" data-fragment-index="1">Jaka Kovač</div>
-					<div class="grid-item fragment" data-fragment-index="2">Ana Ločnikar Jarc</div>
-					<div class="grid-item fragment" data-fragment-index="3">David Zindovič</div>
-					<div class="grid-item fragment" data-fragment-index="1"><img class="profile" src="VegaMind-images/Jaka-2.JPG" ></div>
-					<div class="grid-item fragment" data-fragment-index="2"><img class="profile" src="VegaMind-images/Ana-2.JPG" ></div>
-					<div class="grid-item fragment" data-fragment-index="3"><img class="profile" src="VegaMind-images/David-1.jpg" ></div>
-					<div class="grid-item fragment" data-fragment-index="1">member <br> construction</div>
-					<div class="grid-item fragment" data-fragment-index="2">member <br> programming</div>
-					<div class="grid-item fragment" data-fragment-index="3">mentor <br> social media</div>
-					<div class="grid-item fragment" data-fragment-index="1">6 years of experience <br> in FIRST</div>
-					<div class="grid-item fragment" data-fragment-index="2">2 years of experience <br> in FIRST</div>
-					<div class="grid-item fragment" data-fragment-index="3">7 years of experience <br> in FIRST</div>
+					<div class="grid-item fragment" data-fragment-index="1" data-autoslide="300">Jaka Kovač</div>
+					<div class="grid-item fragment" data-fragment-index="5" data-autoslide="300">Ana Ločnikar Jarc</div>
+					<div class="grid-item fragment" data-fragment-index="9" data-autoslide="300">David Zindović</div>
+					<div class="grid-item fragment" data-fragment-index="2" data-autoslide="300"><img class="profile"
+							src="VegaMind-images/Jaka-3.JPG"></div>
+					<div class="grid-item fragment" data-fragment-index="6" data-autoslide="300"><img class="profile"
+							src="VegaMind-images/Ana-3.JPG"></div>
+					<div class="grid-item fragment" data-fragment-index="10" data-autoslide="300"><img class="profile"
+							src="VegaMind-images/David-2.jpg"></div>
+					<div class="grid-item fragment" data-fragment-index="3" data-autoslide="300">member <br>
+						construction</div>
+					<div class="grid-item fragment" data-fragment-index="7" data-autoslide="300">member <br> programming
+					</div>
+					<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">mentor <br> CFO/social
+						media</div>
+					<div class="grid-item fragment" data-fragment-index="4">2 + 1 FLL, 3 FGC, 2 FTC</div>
+					<div class="grid-item fragment" data-fragment-index="8">2 FGC, 2 FTC</div>
+					<div class="grid-item fragment" data-fragment-index="12">3 + 2 FGC, 2 FTC</div>
 				</div>
+			</section>
+
+			<section>
+				<h2>The Team</h2>
+				<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px">
+					<div>
+						<!-- left -->
+						<div class="fragment fade-left" data-fragment-index="1">
+							<p style="margin-bottom: 10px;">FGC: Team Slovenia</p>
+							<p>Since 2017</p>
+						</div>
+						<div class="fragment fade-left" data-fragment-index="3">
+							<p style="margin-bottom: 10px;">FTC: 22903 VegaMind</p>
+							<p>Since 2022</p>
+						</div>
+					</div>
+					<div class="r-stack">
+						<!-- right -->
+						<img class="fragment fade-in-then-out" data-fragment-index="1" src="VegaMind-images/Team2017.jpg" alt="VegaMind"
+							style="height: 100%; overflow: hidden;">
+						<img class="fragment fade-in-then-out" data-fragment-index="2" src="VegaMind-images/Team2023.jpg" alt="VegaMind"
+							style="height: 100%; overflow: hidden;">
+						<img class="fragment" data-fragment-index="3" src="VegaMind-images/IMG_1460.JPG" alt="VegaMind"
+							style="height: 100%; overflow: hidden;">
+					</div>
+				</div>
+			</section>
+			<section>
+				<h2>Who told us about FTC?</h2>
+				<ul>
+					<li>8565 - TechnicBots (Team USA - 2022)</li>
+					<li>16031 - PARABELLUM (Canada)</li>
+					<li>12463 - KKST-KeepKeenShowTech (Stuttgart)</li>
+					<li>16441 - Pretty Smart Robotics (Jamie)</li>
+				</ul>
+			</section>
+			<section>
+				<h2>Zavod 404</h2>
+
 			</section>
 		</div>
 	</div>
