--- a/vegamind.html
+++ b/vegamind.html
@@ -19,7 +19,7 @@
 	<style>
 		.reveal .grid-container {
 			display: grid;
-			grid-template-columns: repeat(3, 33%);
+			grid-template-columns: repeat(4, 25%);
 			gap: 10px;
 		}
 
@@ -58,22 +58,28 @@
 				<div class="grid-container">
 					<div class="grid-item fragment" data-fragment-index="1" data-autoslide="300">Jaka Kovač</div>
 					<div class="grid-item fragment" data-fragment-index="5" data-autoslide="300">Ana Ločnikar Jarc</div>
-					<div class="grid-item fragment" data-fragment-index="9" data-autoslide="300">David Zindović</div>
+					<div class="grid-item fragment" data-fragment-index="9" data-autoslide="300">Jurij Fortuna</div>
+					<div class="grid-item fragment" data-fragment-index="13" data-autoslide="300">David Zindović</div>
 					<div class="grid-item fragment" data-fragment-index="2" data-autoslide="300"><img class="profile"
 							src="VegaMind-images/Jaka-3.JPG"></div>
 					<div class="grid-item fragment" data-fragment-index="6" data-autoslide="300"><img class="profile"
 							src="VegaMind-images/Ana-3.JPG"></div>
 					<div class="grid-item fragment" data-fragment-index="10" data-autoslide="300"><img class="profile"
+							src="VegaMind-images/Jurij-1.JPG"></div>
+					<div class="grid-item fragment" data-fragment-index="14" data-autoslide="300"><img class="profile"
 							src="VegaMind-images/David-2.jpg"></div>
 					<div class="grid-item fragment" data-fragment-index="3" data-autoslide="300">member <br>
 						construction</div>
 					<div class="grid-item fragment" data-fragment-index="7" data-autoslide="300">member <br> programming
 					</div>
-					<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">mentor <br> CFO/social
+					<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">member <br> programming
+					</div>
+					<div class="grid-item fragment" data-fragment-index="15" data-autoslide="300">mentor <br> CFO/social
 						media</div>
-					<div class="grid-item fragment" data-fragment-index="4">2 + 1 FLL, 3 FGC, 2 FTC</div>
-					<div class="grid-item fragment" data-fragment-index="8">2 FGC, 2 FTC</div>
-					<div class="grid-item fragment" data-fragment-index="12">3 + 2 FGC, 2 FTC</div>
+					<div class="grid-item fragment" data-fragment-index="4">2 + 1 FLL, <br> 3 FGC, <br> 2 FTC</div>
+					<div class="grid-item fragment" data-fragment-index="8">2 FGC, <br> 2 FTC</div>
+					<div class="grid-item fragment" data-fragment-index="12">3 FLL, <br> 1 FGC, <br> 2 FTC</div>
+					<div class="grid-item fragment" data-fragment-index="16">3 + 2 FGC, <br> 2 FTC</div>
 				</div>
 			</section>
 
@@ -93,10 +99,10 @@
 					</div>
 					<div class="r-stack">
 						<!-- right -->
-						<img class="fragment fade-in-then-out" data-fragment-index="1" src="VegaMind-images/Team2017.jpg" alt="VegaMind"
-							style="height: 100%; overflow: hidden;">
-						<img class="fragment fade-in-then-out" data-fragment-index="2" src="VegaMind-images/Team2023.jpg" alt="VegaMind"
-							style="height: 100%; overflow: hidden;">
+						<img class="fragment fade-in-then-out" data-fragment-index="1"
+							src="VegaMind-images/Team2017.jpg" alt="VegaMind" style="height: 100%; overflow: hidden;">
+						<img class="fragment fade-in-then-out" data-fragment-index="2"
+							src="VegaMind-images/Team2023.jpg" alt="VegaMind" style="height: 100%; overflow: hidden;">
 						<img class="fragment" data-fragment-index="3" src="VegaMind-images/IMG_1460.JPG" alt="VegaMind"
 							style="height: 100%; overflow: hidden;">
 					</div>
@@ -114,6 +120,20 @@
 			<section>
 				<h2>Zavod 404</h2>
 
+			</section>
+			<section>
+				<h2>Vegova</h2>
+				<img src="VegaMind-images/vegova.jpg" alt="VegaMind" width="70%">
+			</section>
+			<section>
+				<section>
+					<h2>Stuttgart</h2>
+					<p>Thanks team Germany</p>
+					<img src="VegaMind-images/Stuttgart.jpg" alt="VegaMind" width="70%">
+				</section>
+				<section>
+
+				</section>
 			</section>
 		</div>
 	</div>
