--- a/vegamind.html
+++ b/vegamind.html
@@ -72,7 +72,8 @@
 						construction</div>
 					<div class="grid-item fragment" data-fragment-index="7" data-autoslide="300">member <br> programming
 					</div>
-					<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">member <br> programming
+					<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">member <br>
+						programming
 					</div>
 					<div class="grid-item fragment" data-fragment-index="15" data-autoslide="300">mentor <br> CFO/social
 						media</div>
@@ -126,13 +127,23 @@
 				<img src="VegaMind-images/vegova.jpg" alt="VegaMind" width="70%">
 			</section>
 			<section>
-				<section>
+				<section data-auto-animate>
 					<h2>Stuttgart</h2>
 					<p>Thanks team Germany</p>
 					<img src="VegaMind-images/Stuttgart.jpg" alt="VegaMind" width="70%">
 				</section>
-				<section>
-
+				<section data-auto-animate>
+					<video width="100%" height="100%" controls data-autoplay>
+						<source src="VegaMind-images/ROMUNI-STUTTGART_2022.mp4" type="video/mp4">
+					</video>
+				</section>
+				<section data-auto-animate>
+					<h3>We weren't even colpletely sure if <br> we'll
+						copete at that point</h3>
+				</section>
+				<section data-auto-animate>
+					<video width="100%" height="100%" controls>
+						<source src="VegaMind-images/ROMUNI-STUTTGART_2023.mp4" type="video/mp4">
 				</section>
 			</section>
 		</div>
@@ -146,7 +157,20 @@
 		// More info about initialization & config:
 		// - https://revealjs.com/initialization/
 		// - https://revealjs.com/config/
+
 		Reveal.initialize({
+			multiplex: {
+				// Example values. To generate your own, see the socket.io server instructions.
+				secret: null, // null so the clients do not have control of the master presentation
+				id: '1ea875674b17ca76', // id, obtained from socket.io server
+				url: 'example.com:80' // Location of your socket.io server
+			},
+
+			// Don't forget to add the dependencies
+			dependencies: [
+				{ src: 'https://reveal-multiplex.glitch.me/socket.io/socket.io.js', async: true },
+				{ src: 'https://reveal-multiplex.glitch.me/client.js', async: true }
+			],
 			hash: true,
 
 			// Learn about plugins: https://revealjs.com/plugins/
