--- a/vegamind.html
+++ b/vegamind.html
@@ -162,13 +162,14 @@
 			multiplex: {
 				// Example values. To generate your own, see the socket.io server instructions.
 				secret: null, // null so the clients do not have control of the master presentation
-				id: '1ea875674b17ca76', // id, obtained from socket.io server
-				url: 'example.com:80' // Location of your socket.io server
+				id: '33f6481f9173a1d0', // id, obtained from socket.io server
+				url: 'https://reveal-multiplex.glitch.me' // Location of your socket.io server
 			},
 
 			// Don't forget to add the dependencies
 			dependencies: [
 				{ src: 'https://reveal-multiplex.glitch.me/socket.io/socket.io.js', async: true },
+				//{ src: 'https://reveal-multiplex.glitch.me/master.js', async: true },
 				{ src: 'https://reveal-multiplex.glitch.me/client.js', async: true }
 			],
 			hash: true,
