--- a/vegamind.html
+++ b/vegamind.html
@@ -120,31 +120,81 @@
 			</section>
 			<section>
 				<h2>Zavod 404</h2>
-
+				<div class="r-stack">
+					<img class="fragment fade-in-then-out" data-fragment-index="1" src="VegaMind-images/HYCU.jpg"
+						style="height: 50vh;">
+					<img class="fragment fade-in-then-out" data-fragment-index="2" src="VegaMind-images/404-1.jpg"
+						style="height: 50vh;">
+					<img class="fragment fade-in-then-out" data-fragment-index="3" src="VegaMind-images/404-2.jpg"
+						style="height: 50vh;">
+					<img class="fragment fade-in-then-out" data-fragment-index="4" src="VegaMind-images/404-3.jpg"
+						style="height: 50vh;">
+					<img class="fragment fade-in-then-out" data-fragment-index="5" src="VegaMind-images/404-4.jpg"
+						style="height: 50vh;">
+					<img class="fragment fade-in-then-out" data-fragment-index="6" src="VegaMind-images/STEAM-team.jpg"
+						style="height: 50vh;">
+				</div>
 			</section>
 			<section>
 				<h2>Vegova</h2>
 				<img src="VegaMind-images/vegova.jpg" alt="VegaMind" width="70%">
 			</section>
 			<section>
-				<section data-auto-animate>
+				<section>
 					<h2>Stuttgart</h2>
 					<p>Thanks team Germany</p>
 					<img src="VegaMind-images/Stuttgart.jpg" alt="VegaMind" width="70%">
 				</section>
-				<section data-auto-animate>
+				<section>
 					<video width="100%" height="100%" controls data-autoplay>
 						<source src="VegaMind-images/ROMUNI-STUTTGART_2022.mp4" type="video/mp4">
 					</video>
 				</section>
-				<section data-auto-animate>
-					<h3>We weren't even colpletely sure if <br> we'll
-						copete at that point</h3>
+				<section>
+					<video width="100%" height="100%" controls data-autoplay>
+						<source src="VegaMind-images/ROMUNI-BUKARESTA-2022.mp4" type="video/mp4">
 				</section>
-				<section data-auto-animate>
-					<video width="100%" height="100%" controls>
-						<source src="VegaMind-images/ROMUNI-STUTTGART_2023.mp4" type="video/mp4">
+			</section>
+			<section>
+				<section>
+					<h2 style="margin-top: 15%;">Season: POWERPLAY</h2>
 				</section>
+				<section>
+					<h2>Outreech activities</h2>
+					<div class="r-stack">
+						<img class="fragment fade-in-then-out" data-fragment-index="1"
+							src="VegaMind-images/IMG_20211009_100724.jpg" alt="VegaMind" style="height: 100%;">
+					</div>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2 style="margin-top: 15%;">Season: CENTERSTAGE</h2>
+				</section>
+				<section>
+					<h2>Outreech activities</h2>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</section>
+
+			</section>
+
+
+
+
+
+
+
+
+			<section>
+				<h2>Our social media</h2>
+				<ul>
+					<li>Instagram: @first.slovenia</li>
+					<li>Website: https://firstglobal.si</li>
+				</ul>
 			</section>
 		</div>
 	</div>
@@ -161,7 +211,7 @@
 		Reveal.initialize({
 			multiplex: {
 				// Example values. To generate your own, see the socket.io server instructions.
-				secret: null, // null so the clients do not have control of the master presentation
+				secret: document.cookie.slice(5) || null, // null so the clients do not have control of the master presentation
 				id: '33f6481f9173a1d0', // id, obtained from socket.io server
 				url: 'https://reveal-multiplex.glitch.me' // Location of your socket.io server
 			},
@@ -169,7 +219,7 @@
 			// Don't forget to add the dependencies
 			dependencies: [
 				{ src: 'https://reveal-multiplex.glitch.me/socket.io/socket.io.js', async: true },
-				//{ src: 'https://reveal-multiplex.glitch.me/master.js', async: true },
+				{ src: 'https://reveal-multiplex.glitch.me/master.js', async: true },
 				{ src: 'https://reveal-multiplex.glitch.me/client.js', async: true }
 			],
 			hash: true,
