Je treba delat, če hočeš predstavitev imet

--- a/vegamind.html
+++ b/vegamind.html
@@ -157,38 +157,82 @@
 			</section>
 			<section>
 				<section>
-					<h2 style="margin-top: 15%;">Season: POWERPLAY</h2>
-				</section>
-				<section>
-					<h2>Outreech activities</h2>
-					<div class="r-stack">
-						<img class="fragment fade-in-then-out" data-fragment-index="1"
-							src="VegaMind-images/IMG_20211009_100724.jpg" alt="VegaMind" style="height: 100%;">
-					</div>
-				</section>
-			</section>
-			<section>
-				<section>
-					<h2 style="margin-top: 15%;">Season: CENTERSTAGE</h2>
+					<h2>Season: POWERPLAY</h2>
 				</section>
 				<section>
 					<h2>Outreech activities</h2>
 					<ul>
-						<li></li>
-						<li></li>
+						<li>Presentations to students</li>
+						<li>Presentation for HYCU, Inc</li>
+						<li>Presentation at Elektrofest</li>
+						<li>Meeting with 16031 - PARABELLUM</li>
+						<li>Final conference of Zavod 404</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Robot design</h2>
+					<ul>
+						<li>Acctident with our post</li>
+						<li>REV parts and laser cut wood</li>
+						<li>Gripper inspired by Canadians</li>
+						<li>Semi CAD-ed before build - problems</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Performance on field</h2>
+					<ul>
+						<li>Had no auto</li>
+						<li>We didn't know about RR</li>
+					</ul>
+				</section>
+				<section data-auto-animate>
+					<h2>Performance on field</h2>
+					<img src="VegaMind-images/FTC-score.png">
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2>Season: CENTERSTAGE</h2>
+				</section>
+				<section>
+					<aside class="notes">
+						Pr podgorici je treba povedat da smo se "pgovarjal o clean energy itd"
+					</aside>
+					<h2>Outreech activities</h2>
+					<ul>
+						<li>Presentation at Elektrofest</li>
+						<li>Meeting with 5980 - East Grand Rapids (FRC)</li>
+						<li>Meeting wth 16031 - PARABELLUM and 19043 - CyLiis</li>
+						<li>Help with RR from 19105 - DecebalTech</li>
+						<li>Introduction to 3D modelling workshop in association with Zavod Nefix</li>
+						<li>Presentation to Major of Ljubljana, Zoran Janković</li>
+						<li>Visit to nuclear energy test center in Podgorica</li>
+						<hr>
+						<li>Presentations to students</li>
+						<li>Final conference of Zavod 404</li>
 						<li></li>
 					</ul>
 				</section>
-
+				<section>
+					<h2>Robot design</h2>
+					<ul>
+						<lI>REV parts and laser cut wood (possibly acrylic)</lI>
+						<li>Almost fully CAD-ed</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Performance on field</h2>
+					<div class="r-stack">
+						<div class="fragment fade-in-then-out">
+							<video width="100%" height="100%" controls data-autoplay>
+								<source src="VegaMind-images/ROMUNI-STUTTGART_2023.mp4" type="video/mp4">
+						</div>
+						<div class="fragment fade-in-then-out">
+							<p>Video k tunamo RR</p>
+						</div>
+					</div>
+				</section>
 			</section>
-
-
-
-
-
-
-
-
 			<section>
 				<h2>Our social media</h2>
 				<ul>
