--- a/vegamind.html
+++ b/vegamind.html
@@ -54,90 +54,111 @@
 				</section>
 			</section>
 			<section>
-				<h2>Who are we?</h2>
-				<div class="grid-container">
-					<div class="grid-item fragment" data-fragment-index="1" data-autoslide="300">Jaka Kovač</div>
-					<div class="grid-item fragment" data-fragment-index="5" data-autoslide="300">Ana Ločnikar Jarc</div>
-					<div class="grid-item fragment" data-fragment-index="9" data-autoslide="300">Jurij Fortuna</div>
-					<div class="grid-item fragment" data-fragment-index="13" data-autoslide="300">David Zindović</div>
-					<div class="grid-item fragment" data-fragment-index="2" data-autoslide="300"><img class="profile"
-							src="VegaMind-images/Jaka-3.JPG"></div>
-					<div class="grid-item fragment" data-fragment-index="6" data-autoslide="300"><img class="profile"
-							src="VegaMind-images/Ana-3.JPG"></div>
-					<div class="grid-item fragment" data-fragment-index="10" data-autoslide="300"><img class="profile"
-							src="VegaMind-images/Jurij-1.JPG"></div>
-					<div class="grid-item fragment" data-fragment-index="14" data-autoslide="300"><img class="profile"
-							src="VegaMind-images/David-2.jpg"></div>
-					<div class="grid-item fragment" data-fragment-index="3" data-autoslide="300">member <br>
-						construction</div>
-					<div class="grid-item fragment" data-fragment-index="7" data-autoslide="300">member <br> programming
-					</div>
-					<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">member <br>
-						programming
-					</div>
-					<div class="grid-item fragment" data-fragment-index="15" data-autoslide="300">mentor <br> CFO/social
-						media</div>
-					<div class="grid-item fragment" data-fragment-index="4">2 + 1 FLL, <br> 3 FGC, <br> 2 FTC</div>
-					<div class="grid-item fragment" data-fragment-index="8">2 FGC, <br> 2 FTC</div>
-					<div class="grid-item fragment" data-fragment-index="12">3 FLL, <br> 1 FGC, <br> 2 FTC</div>
-					<div class="grid-item fragment" data-fragment-index="16">3 + 2 FGC, <br> 2 FTC</div>
-				</div>
-			</section>
 
-			<section>
-				<h2>The Team</h2>
-				<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px">
-					<div>
-						<!-- left -->
-						<div class="fragment fade-left" data-fragment-index="1">
-							<p style="margin-bottom: 10px;">FGC: Team Slovenia</p>
-							<p>Since 2017</p>
+				<section>
+					<h2>Who are we?</h2>
+					<div class="grid-container">
+						<div class="grid-item fragment" data-fragment-index="1" data-autoslide="300">Jaka Kovač</div>
+						<div class="grid-item fragment" data-fragment-index="5" data-autoslide="300">Ana Ločnikar Jarc
 						</div>
-						<div class="fragment fade-left" data-fragment-index="3">
-							<p style="margin-bottom: 10px;">FTC: 22903 VegaMind</p>
-							<p>Since 2022</p>
+						<div class="grid-item fragment" data-fragment-index="9" data-autoslide="300">Jurij Fortuna</div>
+						<div class="grid-item fragment" data-fragment-index="13" data-autoslide="300">David Zindović
+						</div>
+						<div class="grid-item fragment" data-fragment-index="2" data-autoslide="300"><img
+								class="profile" src="VegaMind-images/Jaka-3.JPG"></div>
+						<div class="grid-item fragment" data-fragment-index="6" data-autoslide="300"><img
+								class="profile" src="VegaMind-images/Ana-3.JPG"></div>
+						<div class="grid-item fragment" data-fragment-index="10" data-autoslide="300"><img
+								class="profile" src="VegaMind-images/Jurij-1.JPG"></div>
+						<div class="grid-item fragment" data-fragment-index="14" data-autoslide="300"><img
+								class="profile" src="VegaMind-images/David-2.jpg"></div>
+						<div class="grid-item fragment" data-fragment-index="3" data-autoslide="300">member <br>
+							construction</div>
+						<div class="grid-item fragment" data-fragment-index="7" data-autoslide="300">member <br>
+							programming
+						</div>
+						<div class="grid-item fragment" data-fragment-index="11" data-autoslide="300">member <br>
+							programming
+						</div>
+						<div class="grid-item fragment" data-fragment-index="15" data-autoslide="300">mentor <br>
+							CFO/social
+							media</div>
+						<div class="grid-item fragment" data-fragment-index="4">2 + 1 FLL, <br> 3 FGC, <br> 2 FTC</div>
+						<div class="grid-item fragment" data-fragment-index="8">2 FGC, <br> 2 FTC</div>
+						<div class="grid-item fragment" data-fragment-index="12">3 FLL, <br> 1 FGC, <br> 2 FTC</div>
+						<div class="grid-item fragment" data-fragment-index="16">3 + 2 FGC, <br> 2 FTC</div>
+					</div>
+				</section>
+
+				<section>
+					<h2>The Team</h2>
+					<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px">
+						<div>
+							<!-- left -->
+							<div class="fragment fade-left" data-fragment-index="1">
+								<p style="margin-bottom: 10px;">FGC: Team Slovenia</p>
+								<p>Since 2017</p>
+							</div>
+							<div class="fragment fade-left" data-fragment-index="3">
+								<p style="margin-bottom: 10px;">FTC: 22903 VegaMind</p>
+								<p>Since 2022</p>
+							</div>
+						</div>
+						<div class="r-stack">
+							<!-- right -->
+							<img class="fragment fade-in-then-out" data-fragment-index="1"
+								src="VegaMind-images/Team2017.jpg" alt="VegaMind"
+								style="height: 100%; overflow: hidden;">
+							<img class="fragment fade-in-then-out" data-fragment-index="2"
+								src="VegaMind-images/Team2023.jpg" alt="VegaMind"
+								style="height: 100%; overflow: hidden;">
+							<img class="fragment" data-fragment-index="3" src="VegaMind-images/IMG_1460.JPG"
+								alt="VegaMind" style="height: 100%; overflow: hidden;">
 						</div>
 					</div>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2>Who told us about FTC?</h2>
+					<ul>
+						<li>8565 - TechnicBots (Team USA - 2022)</li>
+						<li>16031 - PARABELLUM (Canada)</li>
+						<li>12463 - KKST-KeepKeenShowTech (Stuttgart)</li>
+						<li>16441 - Pretty Smart Robotics (Jamie)</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Our successes</h2>
+					<ul>
+						<li>Safety Award (FGC)</li>
+						<li>Clara Barton Helping Hands Award (FGC)</li>
+						<li>Highest scoring elimination match at FTC 2023</li>
+					</ul>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2>Vegova</h2>
+					<img src="VegaMind-images/vegova.jpg" alt="VegaMind" width="70%">
+				</section>
+				<section>
+					<h2>Zavod 404</h2>
 					<div class="r-stack">
-						<!-- right -->
-						<img class="fragment fade-in-then-out" data-fragment-index="1"
-							src="VegaMind-images/Team2017.jpg" alt="VegaMind" style="height: 100%; overflow: hidden;">
-						<img class="fragment fade-in-then-out" data-fragment-index="2"
-							src="VegaMind-images/Team2023.jpg" alt="VegaMind" style="height: 100%; overflow: hidden;">
-						<img class="fragment" data-fragment-index="3" src="VegaMind-images/IMG_1460.JPG" alt="VegaMind"
-							style="height: 100%; overflow: hidden;">
+						<img class="fragment fade-in-then-out" data-fragment-index="1" src="VegaMind-images/HYCU.jpg"
+							style="height: 50vh;">
+						<img class="fragment fade-in-then-out" data-fragment-index="2" src="VegaMind-images/404-1.jpg"
+							style="height: 50vh;">
+						<img class="fragment fade-in-then-out" data-fragment-index="3" src="VegaMind-images/404-2.jpg"
+							style="height: 50vh;">
+						<img class="fragment fade-in-then-out" data-fragment-index="4" src="VegaMind-images/404-3.jpg"
+							style="height: 50vh;">
+						<img class="fragment fade-in-then-out" data-fragment-index="5" src="VegaMind-images/404-4.jpg"
+							style="height: 50vh;">
+						<img class="fragment fade-in-then-out" data-fragment-index="6"
+							src="VegaMind-images/STEAM-team.jpg" style="height: 50vh;">
 					</div>
-				</div>
-			</section>
-			<section>
-				<h2>Who told us about FTC?</h2>
-				<ul>
-					<li>8565 - TechnicBots (Team USA - 2022)</li>
-					<li>16031 - PARABELLUM (Canada)</li>
-					<li>12463 - KKST-KeepKeenShowTech (Stuttgart)</li>
-					<li>16441 - Pretty Smart Robotics (Jamie)</li>
-				</ul>
-			</section>
-			<section>
-				<h2>Zavod 404</h2>
-				<div class="r-stack">
-					<img class="fragment fade-in-then-out" data-fragment-index="1" src="VegaMind-images/HYCU.jpg"
-						style="height: 50vh;">
-					<img class="fragment fade-in-then-out" data-fragment-index="2" src="VegaMind-images/404-1.jpg"
-						style="height: 50vh;">
-					<img class="fragment fade-in-then-out" data-fragment-index="3" src="VegaMind-images/404-2.jpg"
-						style="height: 50vh;">
-					<img class="fragment fade-in-then-out" data-fragment-index="4" src="VegaMind-images/404-3.jpg"
-						style="height: 50vh;">
-					<img class="fragment fade-in-then-out" data-fragment-index="5" src="VegaMind-images/404-4.jpg"
-						style="height: 50vh;">
-					<img class="fragment fade-in-then-out" data-fragment-index="6" src="VegaMind-images/STEAM-team.jpg"
-						style="height: 50vh;">
-				</div>
-			</section>
-			<section>
-				<h2>Vegova</h2>
-				<img src="VegaMind-images/vegova.jpg" alt="VegaMind" width="70%">
+				</section>
 			</section>
 			<section>
 				<section>
@@ -158,32 +179,55 @@
 			<section>
 				<section>
 					<h2>Season: POWERPLAY</h2>
+					<img src="VegaMind-images/POWERPLAY_Logo_Horiz_RGB_FullColorReverse.png">
 				</section>
 				<section>
-					<h2>Outreech activities</h2>
-					<ul>
-						<li>Presentations to students</li>
-						<li>Presentation for HYCU, Inc</li>
-						<li>Presentation at Elektrofest</li>
-						<li>Meeting with 16031 - PARABELLUM</li>
-						<li>Final conference of Zavod 404</li>
-					</ul>
+					<h2>Outreach activities</h2>
+					<div style="display: grid; grid-template-columns: 1fr 1fr; align-content: center;">
+						<div style="margin: auto;">
+							<ul>
+								<!-- slike...-->
+								<li>Presentations to students</li>
+								<li>Presentation for HYCU, Inc</li>
+								<li>Presentation at Elektrofest</li>
+								<li>Meeting with <br> 16031 - PARABELLUM</li>
+								<li>Fairs MOS and Informativa</li>
+								<li>Final conference of Zavod 404</li>
+							</ul>
+						</div>
+						<div style="width: 100%;">
+							<img src="VegaMind-images/IMG_1517.JPG" alt="VegaMind">
+						</div>
+					</div>
 				</section>
 				<section>
 					<h2>Robot design</h2>
-					<ul>
-						<li>Acctident with our post</li>
-						<li>REV parts and laser cut wood</li>
-						<li>Gripper inspired by Canadians</li>
-						<li>Semi CAD-ed before build - problems</li>
-					</ul>
+					<div style="display: grid; grid-template-columns: 2fr 3fr;">
+						<div style="margin: auto;">
+							<ul>
+								<!-- slika robota-->
+								<li>Accident with the shipping</li>
+								<li>REV parts and laser cut wood</li>
+								<li>Gripper inspired by Canadians</li>
+								<li>Semi CAD-ed before build - problems</li>
+							</ul>
+						</div>
+						<div>
+							<img src="VegaMind-images/cristiiiii.jpg" alt="VegaMind">
+						</div>
+					</div>
 				</section>
 				<section data-auto-animate>
 					<h2>Performance on field</h2>
-					<ul>
-						<li>Had no auto</li>
-						<li>We didn't know about RR</li>
-					</ul>
+					<p>Mecanum wheels, no auto, we didn't know about RR</p>
+					<div style="display: grid; grid-template-columns: 1fr 1fr;">
+						<div>
+							<img src="VegaMind-images/Robot-2022.jpg" alt="VegaMind">
+						</div>
+						<div>
+							<img src="VegaMind-images/CAD-2023.png" alt="VegaMind">
+						</div>
+					</div>
 				</section>
 				<section data-auto-animate>
 					<h2>Performance on field</h2>
@@ -193,32 +237,58 @@
 			<section>
 				<section>
 					<h2>Season: CENTERSTAGE</h2>
+					<img src="VegaMind-images/FIRST_CENTERSTAGE_Logo_Horizontal_Full Color Reverse_RGB_June.png"
+						width="100%">
 				</section>
-				<section>
-					<aside class="notes">
-						Pr podgorici je treba povedat da smo se "pgovarjal o clean energy itd"
-					</aside>
-					<h2>Outreech activities</h2>
-					<ul>
-						<li>Presentation at Elektrofest</li>
-						<li>Meeting with 5980 - East Grand Rapids (FRC)</li>
-						<li>Meeting wth 16031 - PARABELLUM and 19043 - CyLiis</li>
-						<li>Help with RR from 19105 - DecebalTech</li>
-						<li>Introduction to 3D modelling workshop in association with Zavod Nefix</li>
-						<li>Presentation to Major of Ljubljana, Zoran Janković</li>
-						<li>Visit to nuclear energy test center in Podgorica</li>
-						<hr>
-						<li>Presentations to students</li>
-						<li>Final conference of Zavod 404</li>
-						<li></li>
-					</ul>
+				<section data-auto-animate>
+					<h2>Outreach activities</h2>
+					<div style="display: grid; grid-template-columns: 2fr 3fr;">
+						<div style="margin: auto;">
+							<ul>
+								<li>Meeting with 5980 - East Grand Rapids (FRC)</li>
+								<li>Meeting wth 16031 - PARABELLUM and 19043 - CyLiis</li>
+								<li>Help with RR from 19105 - DecebalTech</li>
+								<li>Meetings with many FGC team (eg. New Zeland, Italy, Suriname, Inodesia</li>
+								<li>Visit to nuclear energy test center in Podgorica</li>
+							</ul>
+						</div>
+						<div>
+							<img src="VegaMind-images/IMG_2598.JPG" alt="VegaMind">
+						</div>
+					</div>
+				</section>
+				<section data-auto-animate>
+					<h2>Outreach activities</h2>
+					<div style="display: grid; grid-template-columns: 2fr 3fr;">
+						<div style="margin: auto;">
+							<ul>
+								<li>Introduction to 3D modelling workshop</li>
+								<li>Presentations at Elektrofest, MOS, Informativa</li>
+								<li>Presentation to Major of Ljubljana, Zoran Janković</li>
+								<hr>
+								<li>Presentations to students</li>
+								<li>Final conference of <br> Zavod 404</li>
+							</ul>
+						</div>
+						<div>
+							<img src="VegaMind-images/MOS-al-neki.jpg" alt="VegaMind">
+						</div>
+					</div>
 				</section>
 				<section>
 					<h2>Robot design</h2>
-					<ul>
-						<lI>REV parts and laser cut wood (possibly acrylic)</lI>
-						<li>Almost fully CAD-ed</li>
-					</ul>
+					<div style="display: grid; grid-template-columns: 2fr 3fr;">
+						<div style="margin: auto;">
+							<ul>
+								<!-- slika robota-->
+								<lI>REV parts and laser cut wood (possibly acrylic)</lI>
+								<li>Almost fully CAD-ed</li>
+							</ul>
+						</div>
+						<div>
+							<img src="VegaMind-images/CAD-2024.png" alt="VegaMind">
+						</div>
+					</div>
 				</section>
 				<section>
 					<h2>Performance on field</h2>
