--- a/vegamind.html
+++ b/vegamind.html
@@ -131,9 +131,10 @@
 				<section>
 					<h2>Our successes</h2>
 					<ul>
-						<li>Safety Award (FGC)</li>
-						<li>Clara Barton Helping Hands Award (FGC)</li>
-						<li>Highest scoring elimination match at FTC 2023</li>
+						<li>Safety Award (FGC 2019, 2022)</li>
+						<li>Clara Barton Helping Hands Award (FGC 2022, 2023)</li>
+						<li>Highest scoring elimination match (FGC 2023)</li>
+						<li>Mansa Musa Award for Fundraising (FGC 2018, 2019)</li>
 					</ul>
 				</section>
 			</section>
