--- a/vegamind.html
+++ b/vegamind.html
@@ -247,9 +247,9 @@
 						<div style="margin: auto;">
 							<ul>
 								<li>Meeting with 5980 - East Grand Rapids (FRC)</li>
-								<li>Meeting wth 16031 - PARABELLUM and 19043 - CyLiis</li>
+								<li>Meeting with 16031 - PARABELLUM and 19043 - CyLiis</li>
 								<li>Help with RR from 19105 - DecebalTech</li>
-								<li>Meetings with many FGC team (eg. New Zeland, Italy, Suriname, Inodesia</li>
+								<li>Meetings with many FGC teams (eg. New Zeland, Italy, Suriname, Inodesia</li>
 								<li>Visit to nuclear energy test center in Podgorica</li>
 							</ul>
 						</div>
@@ -294,12 +294,13 @@
 				<section>
 					<h2>Performance on field</h2>
 					<div class="r-stack">
-						<div class="fragment fade-in-then-out">
+						<div class="fragment fade-in-then-out" data-fragment-index="0" style="height: 60vh; overflow: hidden;">
 							<video width="100%" height="100%" controls data-autoplay>
 								<source src="VegaMind-images/ROMUNI-STUTTGART_2023.mp4" type="video/mp4">
 						</div>
-						<div class="fragment fade-in-then-out">
-							<p>Video k tunamo RR</p>
+						<div class="fragment fade-in-then-out" data-fragment-index="1" style="height: 60vh; overflow: hidden;">
+							<video width="100%" height="100%" controls data-autoplay>
+								<source src="VegaMind-images/IMG_3671.mp4" type="video/mp4">
 						</div>
 					</div>
 				</section>
