--- a/vegamind.html
+++ b/vegamind.html
@@ -129,7 +129,7 @@
 					</ul>
 				</section>
 				<section>
-					<h2>Our successes</h2>
+					<h2>Our achievements</h2>
 					<ul>
 						<li>Safety Award (FGC 2019, 2022)</li>
 						<li>Clara Barton Helping Hands Award (FGC 2022, 2023)</li>
@@ -158,6 +158,11 @@
 							style="height: 50vh;">
 						<img class="fragment fade-in-then-out" data-fragment-index="6"
 							src="VegaMind-images/STEAM-team.jpg" style="height: 50vh;">
+						<div class="fragment fade-in-then-out" data-fragment-index="7"
+							style="height: 60vh; overflow: hidden;">
+							<video width="100%" height="100%" controls data-autoplay muted="">
+								<source src="VegaMind-images/ROMUNI-404-3000-2.mp4" type="video/mp4">
+						</div>
 					</div>
 				</section>
 			</section>
@@ -294,11 +299,13 @@
 				<section>
 					<h2>Performance on field</h2>
 					<div class="r-stack">
-						<div class="fragment fade-in-then-out" data-fragment-index="0" style="height: 60vh; overflow: hidden;">
+						<div class="fragment fade-in-then-out" data-fragment-index="0"
+							style="height: 60vh; overflow: hidden;">
 							<video width="100%" height="100%" controls data-autoplay>
 								<source src="VegaMind-images/ROMUNI-STUTTGART_2023.mp4" type="video/mp4">
 						</div>
-						<div class="fragment fade-in-then-out" data-fragment-index="1" style="height: 60vh; overflow: hidden;">
+						<div class="fragment fade-in-then-out" data-fragment-index="1"
+							style="height: 60vh; overflow: hidden;">
 							<video width="100%" height="100%" controls data-autoplay>
 								<source src="VegaMind-images/IMG_3671.mp4" type="video/mp4">
 						</div>
