--- a/vegamind.html
+++ b/vegamind.html
@@ -270,7 +270,7 @@
 							<ul>
 								<li>Introduction to 3D modelling workshop</li>
 								<li>Presentations at Elektrofest, MOS, Informativa</li>
-								<li>Presentation to Major of Ljubljana, Zoran Janković</li>
+								<li>Presentation to mayor of Ljubljana, Zoran Janković</li>
 								<hr>
 								<li>Presentations to students</li>
 								<li>Final conference of <br> Zavod 404</li>
