--- a/vegamind.html
+++ b/vegamind.html
@@ -174,7 +174,7 @@
 				</section>
 				<section>
 					<video width="100%" height="100%" controls data-autoplay>
-						<source src="VegaMind-images/ROMUNI-STUTTGART_2022.mp4" type="video/mp4">
+						<source src="VegaMind-images/ROMUNI-STUTTGART-2022-2.mp4" type="video/mp4">
 					</video>
 				</section>
 				<section>
@@ -272,7 +272,7 @@
 								<li>Presentations at Elektrofest, MOS, Informativa</li>
 								<li>Presentation to mayor of Ljubljana, Zoran Janković</li>
 								<hr>
-								<li>Presentations to students</li>
+								<li>Presentations to students-/li>-2
 								<li>Final conference of <br> Zavod 404</li>
 							</ul>
 						</div>
