--- a/vegamind.html
+++ b/vegamind.html
@@ -249,7 +249,7 @@
 								<li>Meeting with 5980 - East Grand Rapids (FRC)</li>
 								<li>Meeting with 16031 - PARABELLUM and 19043 - CyLiis</li>
 								<li>Help with RR from 19105 - DecebalTech</li>
-								<li>Meetings with many FGC teams (eg. New Zeland, Italy, Suriname, Inodesia</li>
+								<li>Meetings with many FGC teams (eg. New Zeland, Italy, Suriname, Inodesia)</li>
 								<li>Visit to nuclear energy test center in Podgorica</li>
 							</ul>
 						</div>
@@ -267,7 +267,7 @@
 								<li>Presentations at Elektrofest, MOS, Informativa</li>
 								<li>Presentation to mayor of Ljubljana, Zoran Janković</li>
 								<hr>
-								<li>Presentations to students-/li>-2
+								<li>Presentations to students</li>
 								<li>Final conference of <br> Zavod 404</li>
 							</ul>
 						</div>
