--- a/crc-ang.html
+++ b/crc-ang.html
@@ -108,7 +108,7 @@
 					<h2 id="one">Circuit design</h2>
 				</section>
 				<section data-auto-animate>
-					<h2 id="one">Dizajn vezja</h2>
+					<h2 id="one">Circuit design</h2>
 					<img src="./circuit.png" height="500vh"/>
 				</section>
 				<section>
