--- a/yota.html
+++ b/yota.html
@@ -47,6 +47,7 @@
 					<li class="fragment">S59VEG: ~15 youth HAMs a year</li>
 					<li class="fragment">S50ZLET</li>
 					<li class="fragment">DYM and S51YOTA</li>
+					<li class="fragment">S5NET</li>
 				</ul>
 			</section>
 
