--- a/yota.html
+++ b/yota.html
@@ -42,7 +42,7 @@
 			</section>
 			
 			<section>
-				<h2 class="fragment">Radioactivity in S5</h2>
+				<h2>Radioactivity in S5</h2>
 				<ul>
 					<li class="fragment">S59VEG: ~15 youth HAMs a year</li>
 					<li class="fragment">S50ZLET</li>
@@ -72,7 +72,7 @@
 				<ul>
 					<li class="fragment">A lot of HAMs hate FT8 - Don't factory reset the radio</li>
 					<li class="fragment">We can steal weather baloon sondes - go figure</li>
-					<li class="fragment">Jurijev meme</li>
+					<li class="fragment"><img src="jazjaz-jaka.png" /></li>
 				</ul>
 			</section>
 			
