--- a/yota.html
+++ b/yota.html
@@ -71,8 +71,8 @@
 				<h2>Key learning experiences</h2>
 				<ul>
 					<li class="fragment">A lot of HAMs hate FT8 - Don't factory reset the radio</li>
-					<li class="fragment">We can steal weather baloon sondes - go figure</li>
-					<li class="fragment"><img src="jazjaz-jaka.png" /></li>
+					<li class="fragment" data-fragment-index="1">We can steal weather baloon sondes - go figure</li>
+					<li class="fragment" data-fragment-index="2"><img src="jazjaz-jaka.png" /></li>
 				</ul>
 			</section>
 			
