--- a/yota.html
+++ b/yota.html
@@ -70,9 +70,9 @@
 			<section>
 				<h2>Key learning experiences</h2>
 				<ul>
-					<li class="fragment">A lot of HAMs hate FT8 - don't factory reset the radio</li>
-					<li class="fragment" data-fragment-index="1">We can steal weather baloon sondes - go figure</li>
-					<li class="fragment" data-fragment-index="2" data-auto-animate><img src="jazjaz-jaka.png" /></li>
+					<li class="fragment"data-fragment-index="1">A lot of HAMs hate FT8 - don't factory reset the radio</li>
+					<li class="fragment" data-fragment-index="2" data-auto-animate>We can steal weather baloon sondes - go figure</li>
+					<li class="fragment" data-fragment-index="3"><img src="jazjaz-jaka.png" /></li>
 				</ul>
 			</section>
 			
