--- a/yota.html
+++ b/yota.html
@@ -38,16 +38,18 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1>Radioactivity in Slovenia</h1>
+				<h1 class="fragment">Radioactivity in Slovenia</h1>
+				<img class="fragment" src="radioaktivnost.jpeg" />
 			</section>
 			
 			<section>
 				<h2>Radioactivity in S5</h2>
 				<ul>
 					<li class="fragment">S59VEG: ~15 youth HAMs a year</li>
-					<li class="fragment">S50ZLET</li>
+					<li class="fragment">S50ZLET: ~200 interested participants out of 1200 total</li>
 					<li class="fragment">DYM and S51YOTA</li>
 					<li class="fragment">S5NET</li>
+					<li class="fragment">Meshtastic</li>
 				</ul>
 			</section>
 
