--- a/yota.html
+++ b/yota.html
@@ -47,7 +47,7 @@
 				<ul>
 					<li class="fragment">S59VEG: ~15 youth HAMs a year</li>
 					<li class="fragment">S50ZLET: ~200 interested participants out of 1200 total</li>
-					<li class="fragment">DYM and S51YOTA</li>
+					<li class="fragment">DYM and S51YOTA: ~4000 QSOs, 14 activators (11 from S59VEG)</li>
 					<li class="fragment">S5NET</li>
 					<li class="fragment">Meshtastic</li>
 				</ul>
