--- a/yota.html
+++ b/yota.html
@@ -38,7 +38,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1 class="fragment">Radioactivity in Slovenia</h1>
+				<h1>Radioactivity in Slovenia</h1>
 				<img class="fragment" src="radioaktivnost.jpeg" />
 			</section>
 			
@@ -73,8 +73,9 @@
 				<h2>Key learning experiences</h2>
 				<ul>
 					<li class="fragment"data-fragment-index="1">A lot of HAMs hate FT8 - don't factory reset the radio</li>
-					<li class="fragment" data-fragment-index="2" data-autoslide="300">We can steal weather baloon sondes - go figure</li>
-					<li class="fragment" data-fragment-index="3"><img src="jazjaz-jaka.png" /></li>
+					<li>
+						<div class="fragment" data-fragment-index="2" data-autoslide="300">We can steal weather baloon sondes - go figure</div>
+					<img class="fragment" data-fragment-index="3" src="jazjaz-jaka.png" /></li>
 				</ul>
 			</section>
 			
