--- a/yota.html
+++ b/yota.html
@@ -43,7 +43,7 @@
 			</section>
 			
 			<section>
-				<h2>Radioactivity in S5</h2>
+				<h2>HAM radio activity in S5</h2>
 				<ul>
 					<li class="fragment">S59VEG: ~15 youth HAMs a year</li>
 					<li class="fragment">S50ZLET: ~200 interested participants out of 1200 total</li>
