--- a/yota.html
+++ b/yota.html
@@ -38,26 +38,30 @@
 	<div class="reveal">
 		<div class="slides">
 			<section>
-				<h1>Radioactivity in Slovenia</h1>
+				<h1>Radio  in Slovenia</h1>
 				<img class="fragment" src="radioaktivnost.jpeg" />
 			</section>
 			
 			<section>
-				<h2>HAM radio activity in S5</h2>
+				<h2>HAM radio in Slovenia</h2>
 				<ul>
 					<li class="fragment">S59VEG: ~15 youth HAMs a year</li>
 					<li class="fragment">S50ZLET: ~200 interested participants out of 1200 total</li>
 					<li class="fragment">DYM and S51YOTA: ~4000 QSOs, 14 activators (11 from S59VEG)</li>
-					<li class="fragment">S5NET</li>
-					<li class="fragment">Meshtastic</li>
+					<li class="fragment">S5HAM.net</li>
+					<li class="fragment">Meshtastic and Meshcore</li>
 				</ul>
 			</section>
 
 			<section>
 				<h2>Camp improvement</h2>
 				<ul>
-					<li class="fragment">Better food</li>
-					<li class="fragment">VHF/UHF Contest not being at the same time as dinner</li>
+					<li class="fragment">
+						VHF/UHF Contest not being at the same time as dinner with small number of participants
+						<ul>
+							<li class="fragment">Make the contest official 😉</li>
+						</ul>
+					</li>
 				</ul>
 			</section>
 
@@ -69,16 +73,25 @@
 					<li class="fragment">Weather baloon sondes</li>
 				</ul>
 			</section>
+
 			<section>
 				<h2>Key learning experiences</h2>
 				<ul>
 					<li class="fragment"data-fragment-index="1">A lot of HAMs hate FT8 - don't factory reset the radio</li>
 					<li>
-						<div class="fragment" data-fragment-index="2" data-autoslide="300">We can steal weather baloon sondes - go figure</div>
-					<img class="fragment" data-fragment-index="3" src="jazjaz-jaka.png" /></li>
+						<img class="fragment" data-fragment-index="2" src="jazjaz-jaka.png" />
+					</li>
 				</ul>
 			</section>
-			
+
+			<section>
+				<h2>S5YOTA improvements</h2>
+				<ul>
+					<li class="fragment"data-fragment-index="1">Inform new amateurs about YOTA</li>
+					<li class="fragment"data-fragment-index="2">Encourage our members to try contesting</li>
+					<li class="fragment"data-fragment-index="3">Meshstastic/Meshcore?</li>
+				</ul>
+			</section>
 		</div>
 	</div>
 
